# mouse

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh  uninstall.sh
doc/: com.science4ai.mouse.plist  mouse.toml
src/: config.rs  main.rs
